...
        
        if ( !weakSelf.dateVM.highlight && [weakSelf.dateVM.date isToday]) {
            weakSelf.monthDay.textColor = [UIColor blueColor];
        }
        weakSelf.dot.hidden = !([weakSelf.dateVM.events count] > 0) || weakSelf.dateVM.highlight || weakSelf.dateVM.lineNumber > 1;
        
        weakSelf.accessibilityIdentifier = weakSelf.dateVM.highlight ? @"DG Highlight" : @"DG UnHighlight";
        weakSelf.accessibilityValue = weakSelf.dateVM.title;
    };
    
    self.dateVM.updateHandler();
}

...
